Fixed scrollbar so it's not horizontally scrolling.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@ html{
   font-family: sans-serif;
   cursor: default;
 }
+::selection {
+  background: navy;
+  color: white;
+}
+::-moz-selection {
+  background: navy;
+  color: white;
+}
 h2{
   font-weight: lighter;
   text-transform: uppercase;
@@ -106,7 +114,7 @@ a:hover{
   right: 0;
   bottom: 0;
   left: 0;
-  overflow: visible;
+  overflow: hidden;
   z-index: -100;
   padding: 0 0 5% 0;
 }
@@ -118,7 +126,8 @@ a:hover{
   right: 0;
   bottom: 0;
   left: 0;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   z-index: -100;
   padding: 0 0 5% 0;
 }
@@ -139,7 +148,8 @@ a:hover{
   height: 60vh;
   max-height: 60vh;
   padding: 30px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   border: 2px white solid;
   border-radius: 10px;
 }
@@ -153,7 +163,8 @@ a:hover{
   height: 65vh;
   max-height: 65vh;
   padding: 30px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   border: 2px white solid;
   border-radius: 10px;
 }
@@ -167,7 +178,7 @@ a:hover{
   height: 75vh;
   max-height: 75vh;
   padding: 30px;
-  overflow: scroll;
+  overflow: hidden;
   border: 2px white solid;
   border-radius: 10px;
   margin: 0 auto;
@@ -182,7 +193,8 @@ a:hover{
   height: 75vh;
   max-height: 75vh;
   padding: 30px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   border: 2px white solid;
   border-radius: 10px;
   margin: 0 auto;
@@ -196,7 +208,8 @@ a:hover{
   height: 33vh;
   max-height: 33vh;
   padding: 30px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   border: 2px white solid;
   border-radius: 10px;
   margin: 0 auto 30px auto;
@@ -208,15 +221,28 @@ a:hover{
   justify-content: center;
   margin-top: 30px;
 }
+
+/* Scrollbar Here */
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 0 50px 0 0;
-  background-color: navy;
+  border-radius: 10px;
+  background-color: rgb(255,255,255,0.7);
 }
+
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(128,128,128,0.8);
+}
+
+/* End Scrollbar */
+
 .row{
   overflow: hidden;
   padding: 10px;
